add /rekit command

--- a/plugin.yml
+++ b/plugin.yml
@@ -16,3 +16,5 @@ permissions: # kit permissions - kit.<kit name>
 commands:
   kit:
     description: Kit UI!
+  rekit:
+    description: Re-apply kit
